Changelog
=========


1.0a5
-----

* Created safe_decode_header util function, which handles the encoding
  properly for get_filenames according to rfc 2047.
  This solves a test issue.
  [jbaumann]

* Added support for nested multipart emails where the attachment is within another part
  of the message.
  [jbaumann]


1.0a4
-----


1.0a3
-----

* Removed `save_attachments`: moved to `opengever.mail` since its opengever specific
  [02.11.2010, jbaumann]

* Added `remove_attachments` method
  [01.11.2010, jbaumann]

* Added test for filename encoding problem. Test still fails...
  [Thomas Buchberger]

* Moved unwrapping of attached messages into utility method. Added test.
  [Thomas Buchberger]

* Correctly restore current SecurityManger after mail creation.
  [Thomas Buchberger]

* Added tests for unknown sender
  [Thomas Buchberger]

1.0a2
-----


1.0
---

* Initial release